crates/opengp-ui/src/ui/widgets/snapshots/opengp_ui__ui__widgets__loading__tests__loading_indicator_snapshot_arrow_spinner.snap
---
source: crates/opengp-ui/src/ui/widgets/loading.rs
assertion_line: 256
expression: terminal.backend()
---
"                                        "
"              ↗ Saving...               "
"                                        "
