crates/opengp-ui/src/ui/widgets/snapshots/opengp_ui__ui__widgets__loading__tests__loading_indicator_snapshot_default_dots_spinner.snap
---
source: crates/opengp-ui/src/ui/widgets/loading.rs
assertion_line: 211
expression: terminal.backend()
---
"                                        "
"         ⠋ Loading allergies...         "
"                                        "
