crates/opengp-ui/src/ui/widgets/snapshots/opengp_ui__ui__widgets__loading__tests__loading_indicator_snapshot_line_spinner.snap
---
source: crates/opengp-ui/src/ui/widgets/loading.rs
assertion_line: 233
expression: terminal.backend()
---
"                                        "
"            | Processing...             "
"                                        "
